--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 /_notes
-.eslintcache*
+.eslintcache
 
 # dependencies
 node_modules/
